<resources>
    <string name="app_name">광문화물운송</string>
    <string name="vihicle_number">차량번호</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="regist_vihicle">차량 등록</string>
    <string name="regist_trans">운송 등록</string>
    <string name="list_trans">운송 내역</string>
    <string name="edit_profile">프로필 수정</string>
    <string name="logout">로그아웃</string>
    <string name="name">이름</string>
    <string name="hint_name">이름 입력</string>
    <string name="hint_vihicle_number">차량번호 네자리 입력</string>
    <string name="phone_number">전화번호</string>
    <string name="hint_phone_number">010-1234-5678</string>
    <string name="hint_password">비밀번호 입력</string>
    <string name="hint_password_check">비밀번호 재입력</string>
    <string name="regist_request">등록요청</string>
    <string name="from">출발지</string>
    <string name="to">도착지</string>
    <string name="product">제품</string>
    <string name="quantity">수량</string>
    <string name="hint_quantity">수량 입력</string>
    <string name="title_activity_login">Login</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="edit">수정</string>
    <string name="hint_new_password">새로운 비밀번호 입력</string>
    <string name="hint_old_password">기존 비밀번호 입력</string>
    <string name="hint_from">출발지를 선택하세요</string>
    <string name="hint_to">도착지를 선택하세요</string>
    <string name="hint_product">제품을 선택하세요</string>
    <string name="edit_trans">운송 수정</string>
    <string name="auto_login">로그인 정보 기억</string>
    <string name="agency">대리점</string>
    <string name="received_request">받은 요청</string>
</resources>