<?xml version="1.0" encoding="utf-8"?>
<!-- Auto layout, variables, and unit scale are not yet supported -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/resist_vihicle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <ImageButton
        android:id="@+id/back"
        android:layout_width="18dp"
        android:layout_height="27dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16.69dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16.69dp"
        android:background="@drawable/regist_vihicle_image_back" />

    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <View
        android:id="@+id/line_head"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/home_line_head"
        />

    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <TextView
        android:id="@+id/text_regist_vihicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/regist_vihicle"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="63dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:fontFamily="@font/inter"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edittext_name"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="9dp"
                android:layout_weight="5"
                android:background="@drawable/regist_vihivle_edit_text"
                android:hint="@string/hint_name"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:textColorHint="#ACACAC"
                android:fontFamily="@font/inter"
                android:inputType="text" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/vihicle_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:fontFamily="@font/inter"
                android:text="@string/vihicle_number"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edittext_vihivle_number"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="5"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="9dp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:background="@drawable/regist_vihivle_edit_text"
                android:hint="@string/hint_vihicle_number"
                android:textColorHint="#ACACAC"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:fontFamily="@font/inter"
                android:inputType="number"
                android:maxLength="4" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:fontFamily="@font/inter"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edittext_phone_number"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="5"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="9dp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:background="@drawable/regist_vihivle_edit_text"
                android:hint="@string/hint_phone_number"
                android:textColorHint="#ACACAC"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:fontFamily="@font/inter"
                android:inputType="phone" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:fontFamily="@font/inter"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edittext_password"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="5"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="9dp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:background="@drawable/regist_vihivle_edit_text"
                android:hint="@string/hint_password"
                android:textColorHint="#ACACAC"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:fontFamily="@font/inter"
                android:inputType="textPassword" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View

                android:layout_width="0dp"
                android:layout_height="27dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="2"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/edittext_password_check"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="5"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="9dp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:background="@drawable/regist_vihivle_edit_text"
                android:hint="@string/hint_password_check"
                android:textColorHint="#ACACAC"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:fontFamily="@font/inter"
                android:inputType="textPassword" />

        </LinearLayout>
    </LinearLayout>

    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <android.widget.Button
        android:id="@+id/button_regist_request"
        android:layout_width="324dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="42dp"
        android:background="@drawable/regist_vihicle_button_request"
        android:text="@string/regist_request"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/kopubdotumbold"
        />
</RelativeLayout>